# prog_lab_1__2_sem

./: CMakeLists.txt  main.cpp
figures/: ClosedPolyLine.cpp  ClosedPolyLine.h  Point.cpp  Point.h  PolyLine.cpp  PolyLine.h  Polygon.cpp  Polygon.h  RegularPolygon.cpp  RegularPolygon.h  Trapezoid.cpp  Trapezoid.h  Triangle.cpp  Triangle.h
polynomial/: Polynomial.cpp
